--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 
+<html>
+<head>
+<title>BIG STRONG TOMMY PARKY</title>
+</head>
+<body>
+
+<h1>FRIES AND COFFEE</h1>
+<p>BIG SEXY TOMMY PARKY</p>
+
+</body>
+</html>
+
