--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>BIG STRONG TOMMY PARKY</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Display IP Address</title>
 </head>
 <body>
+    <h1>Your IP Address</h1>
+    <p id="ip-address">Loading...</p>
 
-<h1>FRIES AND COFFEE</h1>
-<p>BIG SEXY TOMMY PARKY</p>
-
+    <script>
+        // Use ipify API to get the user's IP address
+        fetch('https://api.ipify.org?format=json')
+            .then(response => response.json())  // Convert response to JSON
+            .then(data => {
+                // Display the IP address
+                document.getElementById('ip-address').textContent = data.ip;
+            })
+            .catch(error => {
+                console.error('Error fetching IP address:', error);
+                document.getElementById('ip-address').textContent = 'Unable to fetch IP address';
+            });
+    </script>
 </body>
 </html>
-
