--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Display IP Address</title>
 </head>
 <body>
-    <h1>Your IP Address</h1>
+    <h1>YOUR IP ADDRESS:</h1>
     <p id="ip-address">Loading...</p>
 
     <script>
