--- a/index.html
+++ b/index.html
@@ -1,26 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Display IP Address</title>
-</head>
-<body>
-    <h1>YOUR IP ADDRESS:</h1>
-    <p id="ip-address">Loading...</p>
-
-    <script>
-        // Use ipify API to get the user's IP address
-        fetch('https://api.ipify.org?format=json')
-            .then(response => response.json())  // Convert response to JSON
-            .then(data => {
-                // Display the IP address
-                document.getElementById('ip-address').textContent = data.ip;
-            })
-            .catch(error => {
-                console.error('Error fetching IP address:', error);
-                document.getElementById('ip-address').textContent = 'Unable to fetch IP address';
-            });
-    </script>
-</body>
-</html>
+fetch('https://cors-anywhere.herokuapp.com/https://api.ipify.org?format=json')
+    .then(response => response.json())
+    .then(data => {
+        document.getElementById('ip-address').textContent = data.ip;
+    })
+    .catch(error => {
+        console.error('Error fetching IP address:', error);
+        document.getElementById('ip-address').textContent = 'Unable to fetch IP address';
+    });
