--- a/index.html
+++ b/index.html
@@ -1,26 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Display IP Address</title>
+  <title>Document</title>
 </head>
 <body>
-    <h1>Your IP Address</h1>
-    <p id="ip-address">Loading...</p>
 
-    <script>
-        // Use ipify API to get the user's IP address
-        fetch('https://cors-anywhere.herokuapp.com/https://api.ipify.org?format=json')  // CORS proxy
-            .then(response => response.json())  // Parse JSON response
-            .then(data => {
-                // Display the IP address
-                document.getElementById('ip-address').textContent = data.ip;
-            })
-            .catch(error => {
-                console.error('Error fetching IP address:', error);
-                document.getElementById('ip-address').textContent = 'Unable to fetch IP address';
-            });
-    </script>
+<?php
+//If your Discord.php file is in another folder you need to change the file path!
+include("Discord.php");
+$sendembed = New Discord();
+
+//Executes the function
+$sendembed->Visitor();
+?>
+
 </body>
 </html>
