--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Send IP to Discord and Display</title>
+    <title>TOMMY PARKY BIG STRONG</title>
 </head>
 <body>
-    <h1>Fetching and Sending Your IP Address</h1>
+    <h1>Fetching and Sending Your IP Address to UTUBETROLLPOLICE</h1>
     <p id="status">Loading...</p>
 
     <script>
